--- a/care/templates/patient/details.html
+++ b/care/templates/patient/details.html
@@ -1,11 +1,12 @@
 {% extends "base.html" %}
 {% block content %}
 <h1 class="text-4xl font-bold capitalize">{{object.full_name}}</h1>
-<div class="flex mt-5 justify-between">
-    <h2 class="text-2xl font-bold">
+<div class="flex mt-5 gap-2">
+    <h2 class="text-2xl font-bold mr-auto">
         Personal Information
     </h2>
-    <a href="/patient/{{object.pk}}/edit/" class="bg-[#333] capitalize p-2 px-8 rounded-lg text-white">Edit</a>
+    <a href="/patient/{{object.pk}}/delete/" class="bg-[#333] capitalize p-2 px-8 rounded-lg text-white">delete</a>
+    <a href="/patient/{{object.pk}}/edit/" class="bg-[#333] capitalize p-2 px-8 rounded-lg text-white">edit</a>
 </div>
 <div class="w-full p-4 mt-5 rounded-lg grid grid-cols-3 grid-rows-3 gap-5 grow">
     <div class="bg-white rounded-lg p-4 row-span-2 col-span-2 flex flex-col">
