added profile page and family details crud

--- a/care/templates/base.html
+++ b/care/templates/base.html
@@ -15,6 +15,12 @@
             <h2 class="font-bold text-2xl">Arike</h2>
             <ul class="overflow-scroll">
                 <li before="○" class="before:content-[attr(before)] before:relative before:right-6 text-[#333] p-2 pl-8 rounded-xl my-1 hover:bg-[#333] hover:text-white transition duration-75">
+                    <a href="/">Home</a>
+                </li>
+                <li before="○" class="before:content-[attr(before)] before:relative before:right-6 text-[#333] p-2 pl-8 rounded-xl my-1 hover:bg-[#333] hover:text-white transition duration-75">
+                    <a href="/facility/">Facilities</a>
+                </li>
+                <li before="○" class="before:content-[attr(before)] before:relative before:right-6 text-[#333] p-2 pl-8 rounded-xl my-1 hover:bg-[#333] hover:text-white transition duration-75">
                     <a href="/patient/">Patients</a>
                 </li>
             </ul>
@@ -23,7 +29,7 @@
                 <div class="bg-neutral-200 border-0 w-[40px] h-[40px] rounded-[100%] mr-4">
                 </div>
                 <div class="flex flex-col">
-                    <p class="text-lg">{{user}}</p>
+                    <p class="text-lg"><a href="/profile">{{user}}</a></p>
                     <p class="text-blue-500"><a href="/user/logout/">Logout</a></p>
                 </div>
             </div>
