--- a/care/templates/patient/details.html
+++ b/care/templates/patient/details.html
@@ -49,7 +49,7 @@
     </div>
     <div class="bg-white rounded-lg p-4 flex items-center justify-center">
         <p class="text-4xl capitalize font-bold">
-            <a href="/family/">Family Details</a>
+            <a href="/patient/{{object.pk}}/family">Family Details</a>
         </p>
     </div>
     <div class="bg-white rounded-lg p-4 flex items-center justify-center">
