add nurse creation and management; add basic authorization; add autmoated mail verification

--- a/care/templates/base.html
+++ b/care/templates/base.html
@@ -23,6 +23,9 @@
                 <li before="○" class="before:content-[attr(before)] before:relative before:right-6 text-[#333] p-2 pl-8 rounded-xl my-1 hover:bg-[#333] hover:text-white transition duration-75">
                     <a href="/patient/">Patients</a>
                 </li>
+                <li before="○" class="before:content-[attr(before)] before:relative before:right-6 text-[#333] p-2 pl-8 rounded-xl my-1 hover:bg-[#333] hover:text-white transition duration-75">
+                    <a href="/user/">Users</a>
+                </li>
             </ul>
             <hr class="border-solid border-gray-200 border-[0.5] mt-auto">
             <div class="flex justify-start items-center mt-4">
