added treatment views; fixed temporary link token default bug; made changes to models; separated more mixins

--- a/care/templates/base.html
+++ b/care/templates/base.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="h-screen w-screen bg-neutral-200 flex">
-        <div class="bg-white w-1/6 flex flex-col p-4">
+        <div class="bg-white w-1/6 flex flex-col p-4 shadow-lg">
             <h2 class="font-bold text-2xl">Arike</h2>
             <ul class="overflow-scroll">
                 <li before="○" class="before:content-[attr(before)] before:relative before:right-6 text-[#333] p-2 pl-8 rounded-xl my-1 hover:bg-[#333] hover:text-white transition duration-75">
