--- a/care/templates/patient/details.html
+++ b/care/templates/patient/details.html
@@ -44,7 +44,7 @@
     </div>
     <div class="bg-white rounded-lg p-4 flex items-center justify-center">
         <p class="text-4xl capitalize font-bold">
-            <a href="#">Treatments</a>
+            <a href="treatment/">Treatments</a>
         </p>
     </div>
     <div class="bg-white rounded-lg p-4 flex items-center justify-center">
