add create schedule view; add patient disease management

--- a/care/templates/patient/details.html
+++ b/care/templates/patient/details.html
@@ -54,7 +54,7 @@
     </div>
     <div class="bg-white rounded-lg p-4 flex items-center justify-center">
         <p class="text-4xl capitalize font-bold">
-            <a href="#">Disease History</a>
+            <a href="/patient/{{object.pk}}/disease">Disease History</a>
         </p>
     </div>
 </div>
