--- a/care/templates/visit/list.html
+++ b/care/templates/visit/list.html
@@ -8,12 +8,14 @@
     {% for object in object_list %}
     <div class="bg-white rounded-lg flex flex-col p-4">
         <div class="flex items-center">
-            <p class="font-bold">{{object.patient}}</p>
+            <p class="font-bold text-xl">{{object.patient}}</p>
             <p class="ml-auto font-bold text-gray-500">{{object.patient.ward}}</p>
         </div>
+        <p class="font-bold text-gray-500">{{object.timestamp}}</p>
         <p>{{object.patient.address}}</p>
         <p class="font-bold text-blue-500"><a href="tel:+{{object.patient.phone}}">{{object.patient.phone}}</a></p>
-        <div class="flex mt-4 items-center gap-2 justify-end">
+        <div class="flex mt-5 items-center gap-2 justify-end">
+            <a href="/visit/{{object.pk}}/notes" class="border-2 border-black rounded-md font-bold capitalize px-2 hover:text-white hover:bg-[#333]">add notes</a>
             <a href="/visit/{{object.pk}}/delete" class="border-2 border-black rounded-md font-bold capitalize px-2 hover:text-white hover:bg-[#333]">unschedule</a>
             <a href="/visit/{{object.pk}}/edit" class="border-2 border-black rounded-md font-bold capitalize px-2 hover:text-white hover:bg-[#333]">visit</a>
           </div>
