--- a/care/templates/base.html
+++ b/care/templates/base.html
@@ -42,7 +42,7 @@
                 </div>
             </div>
         </div>
-        <div class="w-5/6 p-4 flex flex-col overflow-y-scroll">
+        <div class="w-5/6 p-4 flex flex-col overflow-y-scroll overflow-x-hidden">
                 {% block content %}
                 {% endblock content %}
         </div>
