--- a/care/templates/facility/list.html
+++ b/care/templates/facility/list.html
@@ -22,7 +22,7 @@
         <hr class="border-t-1 mt-4 w-full">
         <div class="flex justify-between mt-2 items-center">
           <p class="font-bold">{{facility.phone}}</p>
-          <a href="#" class="border-2 border-black rounded-md font-bold capitalize px-2">view</a>
+          <a href="/facility/{{facility.pk}}/" class="border-2 border-black rounded-md font-bold capitalize px-2">view</a>
         </div>
     </div>
     {% endfor %}
