--- a/care/templates/patient/list.html
+++ b/care/templates/patient/list.html
@@ -13,7 +13,31 @@
       <input type="submit" value="submit" class="bg-[#333] text-white p-2 rounded-lg capitalize">
     </form>
 </div>
-<div class="flex w-full">
+{% if request.user.role == "SN" %}
+<p class="m-2 text-2xl font-bold capitalize">referred patients</p>
+{% for patient in referred_patients %}
+<div class="flex flex-wrap w-full">
+  <div class="bg-white rounded-lg w-1/2 m-2 p-4">
+      <div class="flex justify-between items-center">
+        <p class="font-bold text-xl">{{patient.full_name}}</p>
+        <p class="text-gray-500 bg-gray-300 px-2 rounded-full">{{patient.kind}}</p>
+      </div>
+      <p class="text-gray-700 mt-2">{{patient.address}}</p>
+      <hr class="border-t-1 mt-4 w-full">
+      <div class="flex justify-between mt-2 items-center">
+        <p class="font-bold">{{patient.phone}}</p>
+        <a href="/patient/{{patient.pk}}" class="border-2 border-black rounded-md font-bold capitalize px-2">view</a>
+      </div>
+  </div>
+</div>
+{% empty %}
+<p class="text-2xl text-slate-600 font-bold">No referred patients.</p>
+{% endfor %}
+
+<hr class="border-t-gray-300 border-t-2 m-2">
+
+{% endif %}
+<div class="flex flex-wrap w-full">
     {% for patient in object_list %}
     <div class="bg-white rounded-lg w-1/2 m-2 p-4">
         <div class="flex justify-between items-center">
