--- a/care/templates/base.html
+++ b/care/templates/base.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arike</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static '/css/base.css' %}">
 
 </head>
 <body>
@@ -18,15 +18,15 @@
                     <a href="/">Home</a>
                 </li>
                 <li before="○" class="before:content-[attr(before)] before:relative before:right-6 text-[#333] p-2 pl-8 rounded-xl my-1 hover:bg-[#333] hover:text-white transition duration-75">
-                    <a href="/facility/">Facilities</a>
-                </li>
-                <li before="○" class="before:content-[attr(before)] before:relative before:right-6 text-[#333] p-2 pl-8 rounded-xl my-1 hover:bg-[#333] hover:text-white transition duration-75">
                     <a href="/patient/">Patients</a>
                 </li>
                 <li before="○" class="before:content-[attr(before)] before:relative before:right-6 text-[#333] p-2 pl-8 rounded-xl my-1 hover:bg-[#333] hover:text-white transition duration-75">
                     <a href="/visit/">Visits</a>
                 </li>
                 {% if request.user.role == "DA" %}
+                <li before="○" class="before:content-[attr(before)] before:relative before:right-6 text-[#333] p-2 pl-8 rounded-xl my-1 hover:bg-[#333] hover:text-white transition duration-75">
+                    <a href="/facility/">Facilities</a>
+                </li>
                 <li before="○" class="before:content-[attr(before)] before:relative before:right-6 text-[#333] p-2 pl-8 rounded-xl my-1 hover:bg-[#333] hover:text-white transition duration-75">
                     <a href="/user/">Users</a>
                 </li>
@@ -37,7 +37,10 @@
                 <div class="bg-neutral-200 border-0 w-[40px] h-[40px] rounded-[100%] mr-4">
                 </div>
                 <div class="flex flex-col">
-                    <p class="text-lg"><a href="/profile">{{user}}</a></p>
+                    <div class="flex gap-4 items-center">
+                        <p class="text-lg"><a href="/profile">{{user}}</a></p>
+                        <p class="px-2 rounded-full bg-[#333] text-white font-bold">{{user.role}}</p>
+                    </div>
                     <p class="text-blue-500"><a href="/user/logout/">Logout</a></p>
                 </div>
             </div>
