--- a/care/templates/visit/note_list.html
+++ b/care/templates/visit/note_list.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="flex justify-between m-2 items-center">
   <p class="text-4xl font-bold capitalize">active treatments</p>
-  <a href="create" class="bg-[#333] text-white p-2 px-8 rounded-lg capitalize">Add</a>
+  <a href="/patient/{{patient.pk}}/treatment/create" class="bg-[#333] text-white p-2 px-8 rounded-lg capitalize">Add</a>
 </div>
 <div class="w-full pl-2 py-4">
     <p class="text-2xl font-bold capitalize"><a href="/patient/{{patient.pk}}">{{patient.full_name}}</a></p>
