--- a/care/templates/patient/list.html
+++ b/care/templates/patient/list.html
@@ -31,7 +31,7 @@
   </div>
 </div>
 {% empty %}
-<p class="text-2xl text-slate-600 font-bold">No referred patients.</p>
+<p class="m-2 text-2xl text-slate-600 font-bold">No referred patients.</p>
 {% endfor %}
 
 <hr class="border-t-gray-300 border-t-2 m-2">
