--- a/care/templates/patient/details.html
+++ b/care/templates/patient/details.html
@@ -19,7 +19,8 @@
             </div>
             <div class="flex flex-col">
                 <p class="font-bold capitalize">emergency phone number</p>
-                <p><a class="text-blue-500" href="tel:+{{object.emergency_phone_number}}">{{object.emergency_phone_number}}</a></p>
+                <p><a class="text-blue-500"
+                        href="tel:+{{object.emergency_phone_number}}">{{object.emergency_phone_number}}</a></p>
             </div>
             <div class="flex flex-col">
                 <p class="font-bold capitalize">gender</p>
@@ -33,7 +34,7 @@
     </div>
     <div class="bg-white rounded-lg p-4 flex items-center justify-center">
         <p class="text-4xl capitalize font-bold">
-            <a href="#">Visits</a>
+            <a href="visits/">Visits</a>
         </p>
     </div>
     <div class="bg-white rounded-lg p-4 flex items-center justify-center">
